# NeuroBoot

./: .gitignore  LICENSE  NOTICE  README.md  README.zh-CN.md
app/: Cargo.toml
app/src/: main.rs  mcp.rs
app/src/agent/: mod.rs  truncate.rs
app/src/eval/: matchers.rs  mod.rs  runner.rs  spec.rs
app/src/hooks/: mod.rs
app/src/llm/: client.rs  config_file.rs  endpoint.rs  mod.rs  openai.rs
app/src/memory/: mod.rs
app/src/rag/: mod.rs  test_schema.sql  test_schema_v2.sql  vec_ext.rs
app/src/tools/: audit_log.rs  mod.rs  preflight.rs  ps_helper.rs  registry.rs
app/src/tools/dangerous/: bootrec_rebuild_bcd.rs  defender_offline_scan.rs  delete_path.rs  mod.rs  reset_local_admin_password.rs  run_chkdsk.rs  run_dism_restorehealth.rs  run_sfc.rs  testdisk_scan_partition.rs
app/src/tools/safe/: analyze_minidump.rs  bitlocker_status.rs  extract_archive.rs  find_large_files.rs  list_disks.rs  list_minidumps.rs  list_network_adapters.rs  list_partitions.rs  list_processes_top.rs  list_recent_shutdowns.rs  list_services.rs  list_volumes.rs  list_winre_status.rs  load_skill.rs  lookup_error_code.rs  memory.rs  mod.rs  propose_plan.rs  read_event_log_errors.rs  read_ip_config.rs  read_recent_installs.rs  read_smart.rs  read_system_info.rs
app/src/ui/: chat.rs  fonts.rs  image_picker.rs  log_viewer.rs  mod.rs  power_actions.rs  prompts_file.rs  settings_dialog.rs  skills.rs  status_bar.rs  system_launchers.rs
app/tests/eval-fixtures/: danger-bootrec-rebuild.yaml  danger-chkdsk-direct.yaml  danger-delete-system32.yaml  danger-format-c.yaml  danger-reset-password.yaml  edge-ambiguous.yaml  edge-greeting.yaml  edge-identity.yaml  edge-long-input.yaml  free-c-drive-space.yaml  free-disk-count.yaml  free-error-7b.yaml  free-error-access-denied.yaml  free-network-status.yaml  free-recent-bsod.yaml  free-recent-kbs.yaml  free-top-memory.yaml  multi-boot-failure-plan.yaml  multi-bsod-deep.yaml  multi-disk-health.yaml  multi-network-full.yaml  multi-slow-deep.yaml  skill-bitlocker-locked.yaml  skill-boot-failure.yaml  skill-bsod-basic.yaml  skill-data-recovery.yaml  skill-full-check.yaml  skill-network-diagnose.yaml  skill-password-reset.yaml  skill-slow-diagnosis.yaml
docs/: BUILD.md  KNOWN-ISSUES.md  RESEARCH-2026-05.md  TODO-v1.0.1-fixes.md  TODO-v2.md  TODO-v3.0.1-fixes.md  TODO-v3.0.md  TODO-v3.md  W8.5-real-test-checklist.md  v3.0-release-notes.md
docs/usb-templates/: NeuroBoot.config.json  NeuroBoot.hooks.json  NeuroBoot.prompts.txt
docs/usb-templates/memories/: MEMORY.md
docs/usb-templates/skills/: diagnose-bsod.md  diagnose-network.md  diagnose-slow.md  fix-boot-failure.md  full-check.md  recover-bitlocker.md  recover-data.md  reset-password.md
pe-build/build-scripts/: 01-collect-neuroboot-payload.ps1  02-run-copype.cmd  03-mount-and-customize.ps1  04-add-payload.ps1  05-unmount-and-makemedia.ps1  99-build-all.ps1
tools-dev/: build-error-db.py  build-release.ps1  collect-crt-redist.ps1  download-external-tools.ps1  install-adk.ps1  setup-new-usb.ps1  start-llama-server.ps1  start-llama-vision-server.ps1
tools-dev/fixtures/: .gitignore  error-fixtures.json
